--- a/styles/style.css
+++ b/styles/style.css
@@ -1,24 +1,48 @@
 @import url(./normalize.css);
 @import url(./reset.css);
 
-
+/* 본문 스타일 */
 body {
   background-color: #ffc;
-  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  font-family: "Pretendard Variable", Pretendard, -apple-system,
+  BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", 
+  "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", 
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
+/* 레이아웃 */
+.header, .visual , .main , .slogan , .footer-inner{
+  width: 940px;
+  box-sizing: border-box; /* width(padding+borde)+margin */
+  margin: 0 auto;
+}
+
+/* 헤더 */
 .header{
   background-color: pink;
+  padding: 0 30px; /* 상하:0,좌우:30 /4개면 시계방향 */
+  height: 15vh;
 }
+/* 비주얼 */
 .visual{
-  background-color: orange;
+  background: orange;
+  height: 10vh;
 }
+/* 메인 */
 .main{
-  background-color: lightgreen;
+  background: lightgreen;
+  height: 50vh;
 }
+/* 슬로건 */
 .slogan{
-  background-color: skyblue;
+  background: skyblue;
+  height: 10vh;
 }
+/* 푸터 */
 .footer{
-  background-color: gray;
+  background: gray;
+}
+.footer-inner{
+  background: silver;
+  height: 15vh;
 }
