float을 이용한 메인 레이아웃

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,10 @@
 @import url(./normalize.css);
 @import url(./reset.css);
-
+/* 기본스타일 */
+*, *::before, *::after{
+  box-sizing: border-box; 
+/* width(padding+borde)+margin */
+}
 /* 본문 스타일 */
 body {
   background-color: #ffc;
@@ -13,7 +17,6 @@ body {
 /* 레이아웃 */
 .header, .visual , .main , .slogan , .footer-inner{
   width: 940px;
-  box-sizing: border-box; /* width(padding+borde)+margin */
   margin: 0 auto;
 }
 
@@ -32,11 +35,31 @@ body {
 .main{
   background: lightgreen;
   height: 50vh;
+  display: flow-root;
+  padding: 0 15px;
 }
+.group{
+  margin: 0 15px;
+  float: left;
+}
+.group1{
+background-color: violet;
+width: 250px;
+}
+.group2{
+background-color: salmon;
+width: 380px;
+}
+.group3{
+background-color: yellow;
+width: 190px;
+}
+
 /* 슬로건 */
 .slogan{
   background: skyblue;
   height: 10vh;
+  clear:both;
 }
 /* 푸터 */
 .footer{
