--- a/styles/style.css
+++ b/styles/style.css
@@ -35,13 +35,10 @@ body {
 .main{
   background: lightgreen;
   height: 50vh;
-  display: flow-root;
-  padding: 0 15px;
+  display: flex;
+  flex-direction: row;
 }
-.group{
-  margin: 0 15px;
-  float: left;
-}
+
 .group1{
 background-color: violet;
 width: 250px;
