--- a/styles/style.css
+++ b/styles/style.css
@@ -34,9 +34,12 @@ body {
 /* 메인 */
 .main{
   background: lightgreen;
-  height: 50vh;
+  min-height:450px;
   display: flex;
-  flex-direction: row;
+  flex-flow: row nowrap; /* = flex-direction: row; flex-wrap: nowrap; */
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 30px;
 }
 
 .group1{
@@ -48,7 +51,7 @@ background-color: salmon;
 width: 380px;
 }
 .group3{
-background-color: yellow;
+background-color: gold; 
 width: 190px;
 }
 
