--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 }
 /* 본문 스타일 */
 body {
-  background-color: #ffc;
+  background-color: #ccc;
   font-family: "Pretendard Variable", Pretendard, -apple-system,
   BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", 
   "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", 
@@ -22,10 +22,26 @@ body {
 
 /* 헤더 */
 .header{
-  background-color: pink;
+  background-color: #fff;
   padding: 0 30px; /* 상하:0,좌우:30 /4개면 시계방향 */
   height: 15vh;
+  border-radius: 0 0 15px 15px;
+  position: relative;
 }
+/* 로고 */
+.logo{
+  /* background-color: blue; */
+  position: absolute;
+  top:45px;
+  left:60px
+}
+
+/* 텍스트 링크 모음 */
+.member{
+  background-color: aqua;
+}
+
+
 /* 비주얼 */
 .visual{
   background: orange;
