--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,15 @@
   box-sizing: border-box; 
 /* width(padding+borde)+margin */
 }
+
+/* 링크 스타일 */
+a{
+  color:inherit;
+  text-decoration: none;
+}
 /* 본문 스타일 */
 body {
+  color: #212121;
   background-color: #ccc;
   font-family: "Pretendard Variable", Pretendard, -apple-system,
   BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", 
@@ -38,9 +45,26 @@ body {
 
 /* 텍스트 링크 모음 */
 .member{
-  background-color: aqua;
+  /* background-color: aqua; */
+  text-align : right;
+  padding: 4px 0;
 }
 
+.member li{
+  /* background-color: pink; */
+  display: inline-block;
+}
+
+.member a{
+background-color : coral;
+/* 모바일에서 클릭할 수 있는 면적 늘림 */
+padding: 6px 10px;
+display: inherit;
+}
+
+.divider{
+  margin-right: 4px;
+}
 
 /* 비주얼 */
 .visual{
