메인메뉴 영역과 숨긴 제목 마크업

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,11 @@
 /* width(padding+borde)+margin */
 }
 
+/* root 요소 */
+html{ 
+  font-size: 10px;
+}
+
 /* 링크 스타일 */
 a{
   color:inherit;
@@ -13,6 +18,8 @@ a{
 }
 /* 본문 스타일 */
 body {
+  /* em:부모로부터 상속받은 값을 기준으로 계산,rem:root기준으로 계산 */
+  font-size: 1.4rem;
   color: #212121;
   background-color: #ccc;
   font-family: "Pretendard Variable", Pretendard, -apple-system,
@@ -31,7 +38,6 @@ body {
 .header{
   background-color: #fff;
   padding: 0 30px; /* 상하:0,좌우:30 /4개면 시계방향 */
-  height: 15vh;
   border-radius: 0 0 15px 15px;
   position: relative;
 }
@@ -48,6 +54,11 @@ body {
   /* background-color: aqua; */
   text-align : right;
   padding: 4px 0;
+  /* position 속성을 이용하여 .member 영역을 오른쪽으로 10px만큼 이동 */
+  /* position: relative;
+  right: -10px; */
+  /* transform 속성을 이용하여 .member 영역을 오른쪽으로 10px만큼 이동 */
+  transform: translateX(10px);
 }
 
 .member li{
@@ -56,11 +67,18 @@ body {
 }
 
 .member a{
-background-color : coral;
+/* background-color : coral; */
 /* 모바일에서 클릭할 수 있는 면적 늘림 */
 padding: 6px 10px;
 display: inherit;
+text-transform: uppercase;
 }
+
+/* 마지막 li 요소에 포함된 a요소를 선택하여 
+오른쪽 패딩값을 0으로 재정의 하는 방법/오른쪽 여백 없애기 */
+/* .member li:last-child a{
+  padding-right: 0;
+} */
 
 .divider{
   margin-right: 4px;
