--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,13 @@
 @import url(./normalize.css);
 @import url(./reset.css);
+
+/* 숨김 콘텐츠 */
+.a11y-hidden{
+background-color: yellow;
+position: absolute;
+top:-1000px;
+}
+
 /* 기본스타일 */
 *, *::before, *::after{
   box-sizing: border-box; 
