--- a/styles/style.css
+++ b/styles/style.css
@@ -72,7 +72,7 @@ body {
   padding: 4px 0;
   /* position 속성을 이용하여 .member 영역을 오른쪽으로 10px만큼 이동 */
   /* position: relative;
-  right: -10px; */
+  margin? right: -10px; */
   /* transform 속성을 이용하여 .member 영역을 오른쪽으로 10px만큼 이동 */
   transform: translateX(10px);
 }
@@ -137,6 +137,18 @@ text-transform: uppercase;
   /* X축,Y축로 1px씩 블러는0 */
   text-shadow: 1px 1px 0 #000, -1px -1px 0 #000;
 }
+
+/* 클래스 사이 띄어쓰기:포함되어있다 */
+.is-active .menu-button{
+color:yellow;
+}
+/* before,after 둘다 인라인 요소 */
+.is-active .menu-button::after{
+  content:"";
+  display: block;
+  /* background-color: greenyellow; */
+  border-top: 2px solid #000;
+  }
 
 .sub-menu{
   background-color: pink;
