--- a/styles/style.css
+++ b/styles/style.css
@@ -116,10 +116,16 @@ text-transform: uppercase;
   padding-left: 230px;
   /* 높이 설정으로 인해 display: flow-root; 생략 가능 */
   height: 47px;
+  position: relative;
+}
+/* html에대해,css에대해,웹표준 메뉴는 li기준 */
+.menu >li:nth-child(-n+3){
+position: relative;
 }
 
 .menu-item{
   /* background-color: aqua; */
+  position: relative;
   float: left;
   border-left: 2px solid #fff;
 }
@@ -142,7 +148,7 @@ text-transform: uppercase;
 .is-active .menu-button{
 color:yellow;
 }
-/* before,after 둘다 인라인 요소 */
+/* before,after 둘다 인라인 요소 //부모가 패딩 가지고 있으면 자식은 패딩 영역을 넘을 수x */
 .is-active .menu-button::after{
   content:"";
   display: block;
@@ -153,8 +159,31 @@ color:yellow;
 .sub-menu{
   background-color: pink;
   /* 버튼 누를 떄 마다 좌표 바꿔가며 배치할거기 때문에 absolute 씀 */
+  /* absolute가 지정되면 block이 생성됨
+  독립적인 bfc가 생성되면서 잃어버린 float의 높이를 읽어드림 */
   position: absolute;
+  top: 47;
   display: none;
+}
+
+.menu-html, .menu-css, .menu-standards{
+left:0;
+}
+
+.menu-accessibility, .menu-qna, .menu-archive{
+right: 0;;
+}
+
+.is-active .sub-menu{
+  display: block;
+  /* 공백처리를 줄바꿈의 대상으로 삼지 말아라 */
+  white-space: nowrap;
+}
+
+.sub-menu li{
+  display: inline-block;
+  padding-left: 1em;
+  background-color: gold;
 }
 
 /* 비주얼 */
