--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url(./normalize.css);
 @import url(./reset.css);
+@import url(./fonts.css);
 
 /* 숨김 콘텐츠 */
 .a11y-hidden{
@@ -186,8 +187,31 @@ right: 0;
 
 .sub-menu li{
   display: inline-block;
-  padding-left: 1em;
   background-color: gold;
+}
+
+.sub-menu a::before{
+  content: "\e805";
+  /* 글꼴 알려주기 */
+  font-family: 'fontello';
+  font-weight: normal;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1em;
+  margin-left: .2em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+/* a에 마우스를 올리면 before로 가라-아이콘바뀜,
+tab으로 이동했을 때도 아이콘 바뀜 */
+.sub-menu a:hover::before,
+.sub-menu a:focus::before{
+content:"\e801"
 }
 
 /* 비주얼 */
