--- a/styles/style.css
+++ b/styles/style.css
@@ -430,6 +430,27 @@ a에 주면 아이콘 눌러도 이동 */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+/* 유효성 검사 배너/그림자는 요소가 아님->그림자 위에 겹쳐져서 보임 */
+.validation-list{
+/* background-color: yellow; */
+margin-top: 25px; /* 그림자(5px)만큼 더 줌 */
+/* display: flex; */
+}
+.validation-list li{
+  /* 마진병합-노멀플로우일때 상,하가 겹치면 발생//플렉스(437)면 안겹침 */
+  margin-top: 10px;
+}
+.validation-list a{
+  display: block;
+  background: url(./images/validation_icon.png) no-repeat 25px 50%,#ccc linear-gradient(to bottom, #ccc, #eee); 
+  padding: 8px 15px 8px 50px;
+  border-radius:30px;
+  border: 1px solid #aaa;
+}
+.validation-list a:hover,
+.validation-list a:focus{
+  color: #f00;
+}
 /* 슬로건 */
 .slogan{
   background: skyblue;
