공지사항 및 자료실 디자인 완성

--- a/styles/style.css
+++ b/styles/style.css
@@ -620,6 +620,67 @@ a안에 넣으면 전체영역이 다 링크가 됨 */
   padding: 0 10px;
   font-size: 1.3rem;
 }
+/* 공지사항 및 자료실 */
+.board{
+  background-color: yellow;
+  margin-top: 20px;
+  position: relative;
+}
+.tab-list{
+  /* background-color: lime; */
+  display: flex;
+  flex-flow: row nowrap;
+}
+.tab{
+  border: 1px solid #aaa;
+  background-color: #ccc;
+  border-radius: 5px 5px 0 0;
+  padding: 5px 10px;
+  color: #666;
+}
+/* and조건으로 둘다 만족시키려면 붙여쓰기 */
+.is-select.tab{
+  background-color: #fff;
+  color: #e85e2c;
+  border-color: currentColor currentColor #fff currentColor;
+}
+.tab-panel {
+  display: none;
+  background-color: pink;
+  margin-top: 15px;
+}
+.is-select.tab-panel{
+  display: block;
+}
+.board-list li{
+  background-color: skyblue;
+  margin-top: 10px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+.board-list a{
+flex-grow: 1;
+background-color: coral;
+white-space: nowrap;
+overflow: hidden;
+text-overflow: ellipsis;
+}
+.board-list time{
+flex-shrink: 0;
+margin-left: 10px;
+
+}
+.board-more{
+  background-color: #296897;
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  padding: 8px;
+}
+.icon-plus::before{
+  color: hsla(110,50%,30%,1);
+}
 
 /* 슬로건 */
 .slogan {
@@ -627,7 +688,6 @@ a안에 넣으면 전체영역이 다 링크가 됨 */
   height: 10vh;
   clear: both;
 }
-
 /* 푸터 */
 .footer {
   background: #ccc linear-gradient(to bottom,
